--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=clothestore
+server.port = 8081
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/nome do banco
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
