--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=clothestore
 server.port = 8081
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/nome do banco
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_clothestore
+spring.datasource.username=postgres
+spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
