--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=clothestore
 server.port = 8081
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/db_clothestore
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.username=Jude
+spring.datasource.password=root47
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
