--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+api.security.token.secret=${JWT_SECRET:minha-chave-secreta}
